lustre/ptlrpc/sec.c
@@ -920,7 +920,7 @@ int sptlrpc_import_check_ctx(struct obd_import *imp)
                 RETURN(-EACCES);
         }
 
-	req = ptlrpc_request_cache_alloc(__GFP_IO);
+	req = ptlrpc_request_cache_alloc(GFP_NOFS);
 	if (!req)
 		RETURN(-ENOMEM);
 
@@ -1107,7 +1107,7 @@ int sptlrpc_cli_unwrap_early_reply(struct ptlrpc_request *req,
 	int                     rc;
 	ENTRY;
 
-	early_req = ptlrpc_request_cache_alloc(__GFP_IO);
+	early_req = ptlrpc_request_cache_alloc(GFP_NOFS);
         if (early_req == NULL)
                 RETURN(-ENOMEM);
 
